--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0|^8.1",
+        "php": "^7.4|^8.0|^8.1|^9.0",
         "illuminate/support": "^8.67||^9.0",
-        "laravel/dusk": "^6.15"
+        "laravel/dusk": "^6.15|^7.1"
     },
     "require-dev": {
         "mockery/mockery": "^1.3.3",
